kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
  annotations:
    kubernetes.io/ingress.class: "nginx"
    estafette.io/cloudflare-dns: "true"
    estafette.io/cloudflare-proxy: "true"
    estafette.io/cloudflare-hostnames: "${HOSTNAME}"
spec:
  tls:
  - hosts:
    - ${HOSTNAME}
    secretName: grafana-letsencrypt-certificate
  rules:
  - host: ${HOSTNAME}
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: http
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
  annotations:
    prometheus.io/probe: "true"
    prometheus.io/probe-path: "/api/health"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: grafana
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
      containers:
      - name: grafana
        image: grafana/grafana:5.4.1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
        ports:
        - name: http
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /metrics
            port: http
          initialDelaySeconds: 120
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            port: http
        volumeMounts:
        - name: grafana-data
          mountPath: /var/lib/grafana
      volumes:
      - name: grafana-data
        persistentVolumeClaim:
          claimName: grafana-data
